Fix list bullet alignment when ruby is used

--- a/src/css/helpers/typography.css
+++ b/src/css/helpers/typography.css
@@ -120,7 +120,3 @@ h5 {
     margin-left: 1em;
   }
 }
-
-ruby rt {
-  opacity: 1;
-}
